--- a/karma/Makefile
+++ b/karma/Makefile
@@ -2,6 +2,6 @@
 FLAGS=-std=c++17
 
 all:
-	g++ $(FLAGS) karma.cpp -o karma.out
+	g++ $(FLAGS) karma.cpp -o karma
 clean:
-	rm -f karma.out
+	rm -f karma
